# py-lacrei-backend-challenge

./: .dockerignore  .env.example  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
config/: settings.py  urls.py
professionals/: admin.py  models.py  serializers.py  urls.py  views.py
professionals/migrations/: 0001_initial.py  0002_rename_professsional_professional.py  0003_consultation.py
